Implement dashboard tracking and context widgets